--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@ body {
                 </div>
                 <div class="background background-easy">
                 </div>
-                <div class="congrats retro-window retro-border hide">
+                <div class="congrats retro-window retro-border hide text-center">
                     <div class="title">Congratulations!</div>
+                    <div>
+                        <img src="assets/nice-job.gif" class="congrats-gif" />
+                    </div>
                 </div>
                 <div class="window-about retro-window retro-border">
-                    <div class="title">Memories</div>
+                    <div>
+                        <img src="assets/animated-book.gif" class="animated-book" />
+                    </div>
+                    <div class="title"><strong>Memories</strong></div>
                     <p>A game about nostalgia, something <i>passé</i>. The blocks are randomly shuffled. Each block hides a picture on the other side.</p>
                     <p>Click the blocks to flip them and find the pairs.</p>
                     <p>When you find a pair, the blocks dissappear.</p>
@@ -43,6 +49,7 @@ body {
                     <button class="retro-border close-about">Go!</button>
                     </div>
                 </div>
+                <h1 class="game-title">Memories</h1>
                 <div class="game wrap">
                 </div>
             </main>
